--- a/index.html
+++ b/index.html
@@ -91,15 +91,15 @@
                     </div>
                     <div class="skill-item">
                         <span>JavaScript</span>
-                        <div class="progress-bar"><div class="progress" style="width: 90%"></div></div>
+                        <div class="progress-bar"><div class="progress" style="width: 65%"></div></div>
                     </div>
                     <div class="skill-item">
                         <span>React</span>
-                        <div class="progress-bar"><div class="progress" style="width: 85%"></div></div>
+                        <div class="progress-bar"><div class="progress" style="width: 70%"></div></div>
                     </div>
                     <div class="skill-item">
                         <span>Flutter</span>
-                        <div class="progress-bar"><div class="progress" style="width: 80%"></div></div>
+                        <div class="progress-bar"><div class="progress" style="width: 65%"></div></div>
                     </div>
                 </div>
             </div>
@@ -107,20 +107,24 @@
                 <h3>Backend Development</h3>
                 <div class="skill-items">
                     <div class="skill-item">
+                        <span>Python</span>
+                        <div class="progress-bar"><div class="progress" style="width: 65%"></div></div>
+                    </div>
+                    <div class="skill-item">
                         <span>Node.js</span>
-                        <div class="progress-bar"><div class="progress" style="width: 85%"></div></div>
+                        <div class="progress-bar"><div class="progress" style="width: 70%"></div></div>
                     </div>
                     <div class="skill-item">
                         <span>Express.js</span>
-                        <div class="progress-bar"><div class="progress" style="width: 80%"></div></div>
+                        <div class="progress-bar"><div class="progress" style="width: 65%"></div></div>
                     </div>
                     <div class="skill-item">
                         <span>MongoDB</span>
-                        <div class="progress-bar"><div class="progress" style="width: 85%"></div></div>
+                        <div class="progress-bar"><div class="progress" style="width: 60%"></div></div>
                     </div>
                     <div class="skill-item">
                         <span>MySQL</span>
-                        <div class="progress-bar"><div class="progress" style="width: 85%"></div></div>
+                        <div class="progress-bar"><div class="progress" style="width: 75%"></div></div>
                     </div>
                 </div>
             </div>
